# Fleetalytics

./: .gitignore  2q  3a  README.md  ccp_finalPres.excalidraw  docker-compose.yml  nodeservDockerFile  package-lock.json  package.json  somesome  to-do.txt
Application/: data_generator.py  producer.py
Fleet_data/: data_cleaning.ipynb  test_vehicle.csv
application/: consumer.py  producer.py
applications/consumer/: consumer.py
applications/producer/: Dockerfile  producer.py
broker/: Dockerfile
cache/: Dockerfile  redis.conf
cons/: consumer.py
consumer/: Dockerfile  check.py  consumer.py  pyproject.toml
data/: bus_unique.json  cars.json  data_chunking.ipynb  data_cleaning.ipynb  final_dataclean.ipynb  test_vehicle.csv  typeAdd_cleaning.ipynb  unique_vin.json
database/: Dockerfile  init-db.sh
dockerdir/db/: Dockerfile
dockerdir/node/: Dockerfile
fuzzy_searcher/: Dockerfile  backend.ts  cars.json  package.json
nodeanalytics/: Dockerfile  backend.ts  package.json
nodefuzz/: Dockerfile  backend.ts  tsconfig.json
nodeserv/: .babelrc  DockerFile  Dockerfile  analytics.tsx  backend.ts  components.tsx  fleetview.tsx  index.tsx  package.json  status.tsx  tailwind.config.js  webpack.config.js
nodeserv/public/: analytics.html  analytics_bundle.js  fleetview.html  fleetview_bundle.js  index.html  index_bundle.js  status.html  status_bundle.js
produ/: pyproject.toml
producer/: Dockerfile  producer.py  pyproject.toml
services/: backend.ts
