[tool.poetry]
name = "fleetalytics-consumer"
version = "0.0.1"
description = "rabbit mq consumer for fleetalytics"
authors = ["AlfredDaimari <alfred_daimari@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pika = "^1.3.1"
redis = "^4.3.5"

# for pyright neovim config
psycopg2 = "^2.9.5"
geopy = "^2.3.0"
[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
