[tool.poetry]
name = "fleetalytics"
version = "0.0.1"
description = "all fleetalytics services"
authors = ["AlfredDaimari <alfreddaimari77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
